# ocrval

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml
demo/: Dockerfile
demo/frontend/: vite.config.js
demo/frontend/src/: App.vue  style.css
src/ocrval/: __init__.py  config.py
src/ocrval/adapters/inbound/api/: app.py  router.py  schemas.py
src/ocrval/adapters/outbound/: dictionary.py  docling.py  generic.py
src/ocrval/domain/: models.py  ports.py  services.py
src/ocrval/pipeline/: aggregator.py  registry.py
src/ocrval/scorers/: dictionary.py  perplexity.py  regex.py  repetition.py  short_chunk.py  special_char.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_docling_adapter.py  test_pipeline.py  test_public_api.py  test_service.py
tests/test_scorers/: test_dictionary.py  test_perplexity.py  test_regex.py  test_repetition.py  test_short_chunk.py  test_special_char.py
