[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocrval"
version = "0.1.0"
description = "OCR output quality validation — heuristic scoring pipeline for any OCR engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "PJ Malandrino" },
]
keywords = ["ocr", "validation", "quality", "docling", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[project.urls]
Repository = "https://github.com/pjmalandrino/ocrval"

[tool.hatch.build.targets.wheel]
packages = ["src/ocrval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
